maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:72: error: not found: value g
    else if(y>g && etIndication(x,y-1)==numb-1){
              ^ShortestPathMaze:72: error: not found: value etIndication
    else if(y>g && etIndication(x,y-1)==numb-1){
                   ^